fixed spacing

--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@ td {
 }
 
 .app p.list_head {
-	padding: 1em 1em 0 1em;
+	padding: 0 1em 0 1em;
 	margin-bottom: 0.2em;
 	margin-top: 0;
 	font-weight: bold;
